# spix

./: .gitignore  .ignore  index.html  package.json  tailwind.config.cjs
.github/: FUNDING.yml
public/editor/: index.html
src/: App.svelte  Editor.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tauri-plugin-site/: Cargo.toml  README.md  package.json
tauri-plugin-site/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-site/examples/svelte-app/: package.json
tauri-plugin-site/examples/svelte-app/src/: App.svelte
tauri-plugin-site/examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-site/examples/svelte-app/src-tauri/src/: main.rs
tauri-plugin-site/src/: lib.rs
tauri-plugin-site/webview-dist/: index.d.ts  index.js
tauri-plugin-site/webview-src/: index.ts
